Alignment Issue

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -101,7 +101,22 @@ li {
         margin-top: 7px;
     } */
 
+    .transparentBg {
+      padding-right: 20px;
+    }
+    
+    .colorBg {
+      padding-right: 20px;
+    }
+    
+
   .navbar {
+    /* font-size: 12px; */
     flex-wrap: initial !important;
   }
+
+  .navlink {
+    font-size: 12px;
+  }
 }
+
