--- a/src/app/components/login-signup/login/login.component.css
+++ b/src/app/components/login-signup/login/login.component.css
@@ -156,6 +156,17 @@
       box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.8);;
     }
 
+    i.fas {
+      transition: all 800ms ease-in-out;
+    }
+
+    .agree:focus i.fas {
+      -ms-transform: rotate(360deg);
+      -webkit-transform: rotate(360deg);
+      transform: rotate(360deg);
+      
+    }
+
     .customformrow {
       padding: 50px;
     }
