--- a/src/app/components/mobile-nav/mobile-nav.component.css
+++ b/src/app/components/mobile-nav/mobile-nav.component.css
@@ -104,7 +104,7 @@
 
 .dropdown-menu {
   position: absolute;
-  left: 25% !important;
+  left: 55% !important;
   margin-top: 10px;
   text-align: right;
   /* min-width: 50px !important; */
@@ -153,4 +153,17 @@
 
 .user-dropdown.user-name {
     margin-left: 0px !important;
+}
+
+@media screen and (max-width: 340px) {
+  .dropdown-menu {
+    position: absolute;
+    left: 45% !important;
+    margin-top: 10px;
+    text-align: right;
+    /* min-width: 50px !important; */
+    right: 10px !important;
+    /* left: 57%; */
+  }
+  
 }
